# BC-Bench

./: .editorconfig  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  COUNTERFACTUAL.md  EXPERIMENTS.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: experiment.md
.github/prompts/: create-counterfactual.prompt.md
.github/workflows/: CI.yml  claude-evaluation.yml  copilot-evaluation.yml  copilot-setup-steps.yml  dataset-validation.yml  get-entries.yml  mini-evaluation.yml  requeue-evaluation.yml  summarize-results.yml
dataset/: bcbench.jsonl  bcbench_extensibility.yaml  bcbench_extensibility_old.yaml  bcbench_fn_metrics.json  bcbench_metrics.jsonl  bcbench_nav.jsonl  codereview.jsonl  counterfactual.jsonl  schema.json
dataset/extensibility_requests/: extensibility_dataset.yaml
docs/: _config.yml  bug-fix.md  index.md  test-generation.md
docs/_data/: bug-fix.json  code-review.json  leaderboard.json  test-generation.json
docs/_includes/: head-custom.html
evaluator/: README.md  metrics.py  scores.py  thesis_metrics.py  thesis_scores.py
notebooks/: altool-comparison.ipynb  bug-fix.ipynb  claude-vs-copilot.ipynb  dataset.ipynb  failure-analysis.ipynb  multi-run.ipynb  utils.py
notebooks/aggregate-result/: claude-opus-4-5.jsonl  copilot-opus-4-5.jsonl
notebooks/archive/: failure-analysis.ipynb  multi-run.ipynb
notebooks/bug-fix/: altool-comparison.ipynb  claude-vs-copilot.ipynb  complexity-correlation.ipynb  failure-analysis.ipynb  overview.ipynb
notebooks/result/: 20178311741.jsonl  20182089549.jsonl
notebooks/test-generation/: altest-comparison.ipynb  overview.ipynb
notebooks/thesis/: experiment1-base-performance.ipynb  experiment2-cf-sensitivity.ipynb  experiment3-layered-failure.ipynb
out2/run-23680126633/: microsoftInternal__NAV-174087.jsonl  microsoftInternal__NAV-174794.jsonl  microsoftInternal__NAV-175577.jsonl  microsoftInternal__NAV-175765.jsonl  microsoftInternal__NAV-176082.jsonl  microsoftInternal__NAV-176150.jsonl  microsoftInternal__NAV-176194.jsonl  microsoftInternal__NAV-176426.jsonl  microsoftInternal__NAV-177493.jsonl  microsoftInternal__NAV-177750.jsonl  microsoftInternal__NAV-178045.jsonl  microsoftInternal__NAV-179733.jsonl  microsoftInternal__NAV-180484.jsonl  microsoftInternal__NAV-181900.jsonl  microsoftInternal__NAV-182354.jsonl  microsoftInternal__NAV-183399.jsonl  microsoftInternal__NAV-185488.jsonl  microsoftInternal__NAV-185696.jsonl  microsoftInternal__NAV-185792.jsonl  microsoftInternal__NAV-188438.jsonl  microsoftInternal__NAV-191624.jsonl  microsoftInternal__NAV-192565.jsonl  microsoftInternal__NAV-193649.jsonl  microsoftInternal__NAV-193853.jsonl  microsoftInternal__NAV-195193.jsonl  microsoftInternal__NAV-201169.jsonl  microsoftInternal__NAV-203923.jsonl  microsoftInternal__NAV-204450.jsonl  microsoftInternal__NAV-205825.jsonl  microsoftInternal__NAV-206135.jsonl  microsoftInternal__NAV-206527.jsonl  microsoftInternal__NAV-206977.jsonl  microsoftInternal__NAV-207177.jsonl  microsoftInternal__NAV-207236.jsonl  microsoftInternal__NAV-207247.jsonl  microsoftInternal__NAV-207878.jsonl  microsoftInternal__NAV-208320.jsonl  microsoftInternal__NAV-208649.jsonl  microsoftInternal__NAV-208748.jsonl  microsoftInternal__NAV-208851.jsonl  (+61 more)
scripts/: AppUtils.psm1  BCBenchUtils.psm1  BCContainerManagement.psm1  DatasetEntry.psm1  Get-WorkflowSummary.ps1  Merge-EvaluationResults.ps1  Setup-ContainerAndRepository.ps1  Verify-BuildAndTests.ps1  bcbench_analyze_artifacts.py  compute_metrics.py
scripts/powershell/: AppUtils.psm1  BCBenchUtils.psm1  BCContainerManagement.psm1  DatasetEntry.psm1  Evaluate.ps1  Setup-ContainerAndRepository.ps1  Setup-ValidationEnvironment.ps1  Validate-Dataset.ps1  Verify-BuildAndTests.ps1
scripts/python/: bc_agent_config.yaml  bc_environment.py  collect_nav.py  (+4 more)
tests/: __init__.py  conftest.py  test_agent_skills.py  test_build_error_extraction.py  test_category_exhaustiveness.py  test_cf_workspace.py  test_claude_code_metrics.py  test_cli_commands.py  test_codereview.py  test_collect_gh.py  test_copilot_metrics_parsing.py  test_copilot_prompt.py  test_counterfactual.py  test_custom_instructions.py  test_dataset_integrity.py  test_diff_path_repeated_flags.py  test_evaluation_factories.py  test_evaluation_summary.py  test_experiment_configuration.py  test_extract_tests_from_patch.py  test_family_analysis.py  test_get_task.py  test_git_operations.py  test_logger.py  test_mcp_config.py  test_metrics.py  test_metrics_to_result_flow.py  test_mini_agent_metrics.py  test_project_categorization.py  test_ps_templates.py  test_result_serialization.py  test_result_writer.py  test_test_error_extraction.py  test_testgeneration_validation.py  test_tool_usage_parser.py  test_type_exhaustiveness.py  test_version.py
(+467 files in other folders)
