[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bcbench"
version = "0.1.0"
description = "Benchmarking tool for Business Central (AL) ecosystem, inspired by SWE-Bench"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Microsoft Corporation"}
]
dependencies = [
    "jsonschema>=4.0",
    "python-dotenv>=1.0",
    "requests>=2.0",
    "unidiff>=0.7",
    "mini-swe-agent>=1.0.0",
    "typer>=0.9.0",
    "typing-extensions>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.13.0",
]

[project.scripts]
bcbench = "bcbench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bcbench = ["agent/*.yaml"]
